--- a/templates/pages/_header.html.twig
+++ b/templates/pages/_header.html.twig
@@ -3,7 +3,7 @@
         <a href="{{ url('app_index') }}"><img class="main-logo" src="{{ asset('build/logo.png') }}" alt="Logo Rêveur Dream"></a>
         <nav class="nav-bar">
             <ul>
-                <li><a href="https://dev.ographik.fr/reveurdream/why.php">Pourquoi publier son rêve ?</a></li>
+                <li><a href="{{ url('app_why') }}">Pourquoi publier son rêve ?</a></li>
                 <li><a href="https://dev.ographik.fr/reveurdream/signin.php">Inscription</a></li>
                 <li><a href="https://dev.ographik.fr/reveurdream/connection.php">Connexion</a></li>
             </ul>
