--- a/templates/pages/_header.html.twig
+++ b/templates/pages/_header.html.twig
@@ -4,8 +4,8 @@
         <nav class="nav-bar">
             <ul>
                 <li><a href="{{ url('app_why') }}">Pourquoi publier son rêve ?</a></li>
-                <li><a href="https://dev.ographik.fr/reveurdream/signin.php">Inscription</a></li>
-                <li><a href="https://dev.ographik.fr/reveurdream/connection.php">Connexion</a></li>
+                <li><a href="{{ url('app_register') }}">Inscription</a></li>
+                <li><a href="{{ url('app_login') }}">Connexion</a></li>
             </ul>
             <div class="lang-switch">FR</div>
         </nav>
