--- a/templates/pages/index.html.twig
+++ b/templates/pages/index.html.twig
@@ -10,7 +10,7 @@
                     <p class="sub-h1">et découvrez les songes similaires.</p>
                     <a href="https://dev.ographik.fr/reveurdream/mydream.php" class="blue-button">commencer</a>
                     <p class="account-connection">Vous avez déjà un compte ? <a
-                                href="https://dev.ographik.fr/reveurdream/connection.php">Connectez-vous</a></p>
+                                href="{{ url('app_login') }}">Connectez-vous</a></p>
                 </div>
             </div>
 
