--- a/templates/dream/step_theme.html.twig
+++ b/templates/dream/step_theme.html.twig
@@ -90,7 +90,7 @@
                         </div>
                     </div>
                     <div class="next-step-buttons">
-                        <a class="blue-button" id="back-to-step-1" href="{{ url('app_dream_category', {'id': dream.id}) }}">>Précédent</a>
+                        <a class="blue-button" id="back-to-step-1" href="{{ url('app_dream_category', {'id': dream.id}) }}">Précédent</a>
                         <input class="blue-button"  type="submit" value="suivant">
                     </div>
                 </form>
