--- a/templates/dream/edit.html.twig
+++ b/templates/dream/edit.html.twig
@@ -14,7 +14,8 @@
                         <label for="edit-dream-type-reve">
                             <input type="radio" id="edit-dream-type-reve" name="edit-dream-type" value="rêve">
                             <div class="filter-box" id="reve" >
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 383.95 383.95"><path d="M0,204V180c.83-6.4,1.41-12.83,2.52-19.17C10.1,117.34,29.78,80.33,62.34,50.47a187.49,187.49,0,0,1,97-47.56C166.16,1.74,173.08,1,180,0h24c6.54.84,13.12,1.45,19.61,2.56,39.46,6.79,73.71,24,102.36,52,29.41,28.75,47.85,63.44,55,104,1.25,7.09,2,14.27,3,21.41v24c-.22,1.09-.5,2.17-.67,3.26-1.55,9.84-2.43,19.83-4.71,29.49A191.48,191.48,0,0,1,225,381c-7,1.19-14,2-21,2.94H180a18.11,18.11,0,0,0-2.86-.64A170.91,170.91,0,0,1,125.5,372Q24.25,331.66,2.92,224.65C1.58,217.83,1,210.87,0,204ZM187.05,318.79c22.95,0,40.43-3.13,56.9-10.63,28.32-12.9,48.34-33.14,55.48-64.36,2.17-9.5-4.47-15.9-13.82-12.82a288.52,288.52,0,0,1-76.69,13.83c-24.79,1.22-49.47.18-73.83-4.61-12.57-2.47-24.86-6.27-37.29-9.42-8.93-2.26-15.26,3.76-13.4,12.57C88.77,264,99.62,280.63,116,293.65A116.65,116.65,0,0,0,187.05,318.79Zm50.66-171.28A24.59,24.59,0,1,0,262.28,123,24.66,24.66,0,0,0,237.71,147.51Zm-91.45.23a24.55,24.55,0,1,0-24.57,24.54A24.61,24.61,0,0,0,146.26,147.74Z"/></svg>
+                                <svg xmlns="http://www.w3.org/2000/svg"
+                                     viewBox="0 0 383.95 383.95">{{ dream.category.ico|raw }}</svg>
                             </div>
                         </label>
                         <label for="edit-dream-type-cauchemar">
