--- a/templates/pages/index.html.twig
+++ b/templates/pages/index.html.twig
@@ -9,7 +9,7 @@
                 <div id="left-col-home">
                     <h1>Contez<br/> votre rêve</h1>
                     <p class="sub-h1">et découvrez les songes similaires.</p>
-                    <a href="{{ url('app_dream_category') }}" class="blue-button">commencer</a>
+                    <a href="{{ url('app_dream') }}" class="blue-button">commencer</a>
                     {% if not app.user %}
                         <p class="account-connection">
                             Vous avez déjà un compte ? <a href="{{ url('app_login') }}">Connectez-vous</a>
