--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,7 +13,7 @@
     <meta property="og:site_name" content="Rêveur Dream - Je partage mon rêve"/>
     <meta name="robots" content="index, follow">
 
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="{{ asset('build/favicon.ico') }}">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
     <!-- Adobe fonts-->
