--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -17,6 +17,7 @@
                     <input type="submit" value="Se connecter">
                 </form>
                 <p class="account-password-lost">Mot de passe oublié&nbsp;? <a href="{{ url('app_forgot_password_request') }}">Cliquez ici</a></p>
+                <p class="account-password-lost"><a href="{{ url('connect_facebook_start') }}">Connect with Facebook Cliquez ici</a></p>
             </div>
 
             <div class="right-col">
