--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -130,6 +130,24 @@
 
     </script>
 
+    <script>
+        window.fbAsyncInit = function() {
+            FB.init({
+                appId      : '659958005291463',
+                xfbml      : true,
+                version    : 'v13.0'
+            });
+            FB.AppEvents.logPageView();
+        };
+
+        (function(d, s, id){
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) {return;}
+            js = d.createElement(s); js.id = id;
+            js.src = "https://connect.facebook.net/en_US/sdk.js";
+            fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));
+    </script>
 {% endblock %}
 </body>
 </html>
