--- a/templates/pages/why.html.twig
+++ b/templates/pages/why.html.twig
@@ -9,7 +9,7 @@
                     <p>Circa hos dies Lollianus primae lanuginis adulescens, Lampadi filius ex praefecto, exploratius causam Maximino spectante, convictus codicem noxiarum artium nondum per aetatem firmato consilio D
                         Descripsisse, exulque mittendus, ut sperabatur, patris inpulsu provocavit ad principem, et iussus ad eius comitatum duci, de fumo, ut aiunt, in flammam traditus.
                         hendant meum consilium, cum ego idem antea multa decreverim, que magis ad hominis dignitatem quam ad rei publicae necessitatem pertinerent? Supplicationem quindecim dierum decrevi sententia mea. Rei publicae satis erat tot dierum quot C. Mario ; dis immortalibus non erat exigua eadem gratulatio qu</p>
-                    <a href="{{ url('app_dream_category') }}" class="blue-button">commencer</a>
+                    <a href="{{ url('app_dream') }}" class="blue-button">commencer</a>
                     {% if not app.user %}
                         <p class="account-connection">
                             Vous avez déjà un compte ? <a href="{{ url('app_login') }}">Connectez-vous</a>
