--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -21,8 +21,7 @@
                         <div class="dream">
                             <img class="phase" src="{{ asset('build/phase.png') }}">
                             <span class="dream_date">{{ dream.createdAt|format_datetime('long', 'none', locale=app.request.getLocale()) }}</span>
-                            <span class="dream_categories"><svg xmlns="http://www.w3.org/2000/svg"
-                                                                viewBox="0 0 383.95 383.95">{{ dream.category.ico|raw }}</svg></span>
+                            <span class="dream_categories">{{ dream.category.ico|raw }}</span>
                             <span class="dream_title">{{ dream.title }}u</span>
                             <span class="dream_invisible">{% if dream.isDraft %} invisible {% endif %}</span>
                             <span class="dream_views"> | {{ dream.numberView }} vues</span>
