--- a/templates/pages/_globe.html.twig
+++ b/templates/pages/_globe.html.twig
@@ -19,6 +19,7 @@
 </div>
 
 <div id="cesiumContainer"></div>
+<div id="loading-overlay"></div>
 
 <div class="filters-column">
     <p>Filtrer les rêves</p>
@@ -73,4 +74,5 @@
         document.getElementById("cesiumContainer").style.height='60vh';
         document.getElementById("cesiumContainer").style.overflow='hidden';
     });
+
 </script>
